<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:layout_editor_absoluteX="-34dp"
       tools:layout_editor_absoluteY="206dp" />

   <Button
       android:id="@+id/btnSetPreferences"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="616dp"
       android:text="@string/set_preferences"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/btnLoadPreferences"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:text="@string/load_preferences"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/btnSetPreferences"
       app:layout_constraintVertical_bias="0.0" />

   <Button
       android:id="@+id/btnAdd"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/add"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.028"
       app:layout_constraintStart_toEndOf="@+id/btnLoadPreferences"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.944" />

   <Button
       android:id="@+id/btnDel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/clear"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.885"
       app:layout_constraintStart_toEndOf="@+id/btnLoadPreferences"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.944" />

   <EditText
       android:id="@+id/etTaskEntry"
       android:hint="@string/enter_task_name"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toTopOf="@+id/btnAdd"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.386"
       app:layout_constraintStart_toEndOf="@+id/btnSetPreferences"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.896" />

   <EditText
       android:id="@+id/etTaskDescription"
       android:hint="@string/enter_task_description"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toTopOf="@+id/btnAdd"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.386"
       app:layout_constraintStart_toEndOf="@+id/btnSetPreferences"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.978" />

</androidx.constraintlayout.widget.ConstraintLayout>